--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,15 @@
 
     <div class="transactions">
       <table>
+        <!-----------  Group Body with thead ---------->
         <thead>
           <th>Transaction</th>
           <th>Amount</th>
         </thead>
+
+        <!-----------  Group Body with tbody ---------->
         <tbody id="tbody">
-          
+
         </tbody>
       </table>
     </div>
